--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,7 +5,7 @@
         <a href="{{ if $.Site.Params.sidebar.profile.url }}{{ $.Site.Params.sidebar.profile.url }}{{ else }}{{ "/#about" }}{{ end }}" aria-label="{{ i18n "global.read_more_about_author"}}">
           <img class="sidebar-profile-picture" src="{{ . }}{{ if in . "//www.gravatar.com/avatar/" }}?s=110{{ end }}" alt="{{ i18n "global.author_picture" }}" />
         </a>
-        <h4 class="sidebar-profile-name">{{ $.Site.Author.name }}</h4>
+        <h4 class="sidebar-profile-name">{{ $.Site.Title }}</h4>
         {{ with $.Site.Author.bio }}
           <h5 class="sidebar-profile-bio">{{ . | markdownify }}</h5>
         {{ end }}
